fix flexbox display, center keys and allow to wrap

--- a/drumkit/style.css
+++ b/drumkit/style.css
@@ -10,11 +10,12 @@ body,html {
 }
 
 .keys {
-  display: flex;
-  flex: 1;
   min-height: 100vh;
+  display: flex;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: center;
+  align-content: center;
 }
 
 .key {
